--- a/src/index.njk
+++ b/src/index.njk
@@ -3,14 +3,17 @@ title: 11ty Starter
 layout: default
 ---
 
-<section class="container">
-    <div class="welcome">
-        <img src="/assets/images/11ty-logo.png" alt="11ty" width="200" height="200">
-        <nav>
-            <a href="https://github.com/chrismademe/11ty-starter-kit/">Starter Kit Github</a>
-            <a href="https://11ty.dev/docs">11ty Documentation</a>
-            <a href="https://github.com/11ty/eleventy/">11ty Github</a>
-            <a href="https://mozilla.github.io/nunjucks/">Nunjucks Docs</a>
+<section class="flex items-center justify-center h-screen">
+    <div class="flex flex-col items-center space-y-8">
+        <div class="flex items-center space-x-4">
+            <img src="/assets/images/11ty-logo.png" alt="11ty" width="120" height="120">
+            <span class="text-3xl text-gray-700">+</span>
+            <img src="/assets/images/tailwind.svg" alt="Tailwind" width="300">
+        </div>
+        <nav class="flex items-center space-x-6">
+            <a class="text-blue-600 hover:underline" href="https://tailwindcss.com/docs/">Tailwind Docs</a>
+            <a class="text-blue-600 hover:underline" href="https://11ty.dev/docs">11ty Docs</a>
+            <a class="text-blue-600 hover:underline" href="https://mozilla.github.io/nunjucks/">Nunjucks Docs</a>
         </nav>
     </div>
 </section>
