Setup Tailwind and improve 404 page

--- a/src/404.njk
+++ b/src/404.njk
@@ -1,13 +1,15 @@
 ---
 title: Page Not Found
-layout: default
 permalink: /404.html
 eleventyExcludeFromCollections: true
 ---
 
-<div class="container">
-    <div class="welcome">
-        <h1>404</h1>
-        <p>The page you're looking for could not be found.</p>
+<div class="md:grid grid-cols-8 h-screen">
+    <div class="flex items-center justify-center px-12 py-6 md:col-span-5">
+        <div class="container max-w-xl">
+            <h1 class="text-3xl font-bold">404</h1>
+            <p>The page you're looking for could not be found.</p>
+        </div>
     </div>
+    <div class="hidden md:block md:col-span-3 bg-cover" style="background-image: url('https://unsplash.it/500/1024')"></div>
 </div>
