--- a/src/index.njk
+++ b/src/index.njk
@@ -1,9 +1,10 @@
 ---
 title: 11ty Starter
-layout: default
+eleventyNavigation:
+    key: Home
 ---
 
-<section class="flex items-center justify-center h-screen">
+<section class="flex items-center justify-center h-screen px-8">
     <div class="flex flex-col items-center space-y-8">
         <div class="flex items-center space-x-4">
             <img src="/assets/images/11ty-logo.png" alt="11ty" width="120" height="120">
@@ -11,9 +12,13 @@ layout: default
             <img src="/assets/images/tailwind.svg" alt="Tailwind" width="300">
         </div>
         <nav class="flex items-center space-x-6">
-            <a class="text-blue-600 hover:underline" href="https://tailwindcss.com/docs/">Tailwind Docs</a>
-            <a class="text-blue-600 hover:underline" href="https://11ty.dev/docs">11ty Docs</a>
-            <a class="text-blue-600 hover:underline" href="https://mozilla.github.io/nunjucks/">Nunjucks Docs</a>
+            <a class="text-blue-700 hover:underline" href="https://tailwindcss.com/docs/">Tailwind Docs</a>
+            <a class="text-blue-700 hover:underline" href="https://11ty.dev/docs">11ty Docs</a>
+            <a class="text-blue-700 hover:underline" href="https://mozilla.github.io/nunjucks/">Nunjucks Docs</a>
         </nav>
     </div>
 </section>
+
+<a class="fixed bottom-0 right-0 m-8 block w-8 h-8 text-purple-900" href="https://underscores.dev">
+    {% include "svg/cg.svg" %}
+</a>
