--- a/src/_layouts/default.njk
+++ b/src/_layouts/default.njk
@@ -23,6 +23,8 @@
 
         <link rel="shortcut icon" type="image/png" href="/assets/images/icons/favicon.png">
 
+        <script type="application/ld+json"></script>
+
     </head>
     <body class="{{ bodyClass }}">
 
