--- a/src/index.njk
+++ b/src/index.njk
@@ -1,5 +1,6 @@
 ---
 title: 11ty Starter
+description: Hello
 eleventyNavigation:
     key: Home
 ---
@@ -10,6 +11,7 @@ eleventyNavigation:
             <img src="/assets/images/11ty.png" alt="11ty" width="120" height="120">
             <span class="text-3xl text-gray-700">+</span>
             <img src="/assets/images/tailwind.svg" alt="Tailwind" width="300">
+            <h1 class="sr-only">11ty + Tailwind</h1>
         </div>
         <nav class="flex items-center space-x-6">
             <a class="text-blue-700 hover:underline" href="https://tailwindcss.com/docs/">Tailwind Docs</a>
