--- a/src/index.njk
+++ b/src/index.njk
@@ -9,18 +9,18 @@ eleventyNavigation:
     <div class="flex flex-col items-center space-y-8">
         <div class="flex items-center space-x-4">
             <img src="/assets/images/11ty.png" alt="11ty" width="120" height="120">
-            <span class="text-3xl text-gray-700">+</span>
+            <span class="text-3xl text-gray-400">+</span>
             <img src="/assets/images/tailwind.svg" alt="Tailwind" width="300">
             <h1 class="sr-only">11ty + Tailwind</h1>
         </div>
         <nav class="flex items-center space-x-6">
-            <a class="text-blue-700 hover:underline" href="https://tailwindcss.com/docs/">Tailwind Docs</a>
-            <a class="text-blue-700 hover:underline" href="https://11ty.dev/docs">11ty Docs</a>
-            <a class="text-blue-700 hover:underline" href="https://mozilla.github.io/nunjucks/">Nunjucks Docs</a>
+            <a class="text-neutral hover:underline" href="https://tailwindcss.com/docs/">Tailwind Docs</a>
+            <a class="text-neutral hover:underline" href="https://11ty.dev/docs">11ty Docs</a>
+            <a class="text-neutral hover:underline" href="https://mozilla.github.io/nunjucks/">Nunjucks Docs</a>
         </nav>
     </div>
 </section>
 
-<a class="fixed bottom-0 right-0 m-8 block w-8 h-8 text-purple-900" href="https://underscores.dev">
+<a class="fixed bottom-0 right-0 m-8 block w-8 h-8 text-gray-600" href="https://underscores.dev">
     {% include "svg/cg.svg" %}
 </a>
