--- a/src/index.njk
+++ b/src/index.njk
@@ -5,22 +5,21 @@ eleventyNavigation:
     key: Home
 ---
 
-<section class="flex items-center justify-center h-screen px-8">
-    <div class="flex flex-col items-center space-y-8">
-        <div class="flex items-center space-x-4">
-            <img src="/assets/images/11ty.png" alt="11ty" width="120" height="120">
-            <span class="text-3xl text-gray-400">+</span>
-            <img src="/assets/images/tailwind.svg" alt="Tailwind" width="300">
-            <h1 class="sr-only">11ty + Tailwind</h1>
-        </div>
-        <nav class="flex items-center space-x-6">
-            <a class="text-neutral hover:underline" href="https://tailwindcss.com/docs/">Tailwind Docs</a>
-            <a class="text-neutral hover:underline" href="https://11ty.dev/docs">11ty Docs</a>
-            <a class="text-neutral hover:underline" href="https://mozilla.github.io/nunjucks/">Nunjucks Docs</a>
-        </nav>
-    </div>
-</section>
 
-<a class="fixed bottom-0 right-0 m-8 block w-8 h-8 text-gray-600" href="https://underscores.dev">
+<div class="container | center-content | px-8">
+    <main class="intro | flow">
+        <img src="/assets/images/11ty.png" alt="11ty" width="120" height="120">
+        <nav class="cluster">
+            <ul>
+                <li><a class="btn" href="https://github.com/chrismademe/underscores-css">Underscores CSS</a></li>
+                <li><a class="btn" href="https://11ty.dev/docs">11ty Docs</a></li>
+                <li><a class="btn" href="https://mozilla.github.io/nunjucks/">Nunjucks Docs</a></li>
+            </ul>
+        </nav>
+    </main>
+</div>
+
+
+<a class="cg | c-grey-500" href="https://underscores.dev">
     {% include "svg/cg.svg" %}
 </a>
