--- a/src/index.njk
+++ b/src/index.njk
@@ -1,25 +1,30 @@
 ---
+layout: default
 title: 11ty Starter
 description: Hello
 eleventyNavigation:
     key: Home
 ---
 
-
 <div class="container | center-content | px-8">
     <main class="intro | flow">
         <img src="/assets/images/11ty.png" alt="11ty" width="120" height="120">
         <nav class="cluster">
             <ul>
-                <li><a class="btn" href="https://github.com/chrismademe/underscores-css">Underscores CSS</a></li>
-                <li><a class="btn" href="https://11ty.dev/docs">11ty Docs</a></li>
-                <li><a class="btn" href="https://mozilla.github.io/nunjucks/">Nunjucks Docs</a></li>
+                <li>
+                    <a class="btn" href="https://github.com/chrismademe/underscores-css">Underscores CSS</a>
+                </li>
+                <li>
+                    <a class="btn" href="https://11ty.dev/docs">11ty Docs</a>
+                </li>
+                <li>
+                    <a class="btn" href="https://mozilla.github.io/nunjucks/">Nunjucks Docs</a>
+                </li>
             </ul>
         </nav>
     </main>
 </div>
 
-
-<a class="cg | c-grey-500" href="https://underscores.dev">
+{# <a class="cg | c-grey-500" href="https://underscores.dev">
     {% include "svg/cg.svg" %}
-</a>
+</a> #}
