--- a/src/assets/css/style.scss
+++ b/src/assets/css/style.scss
@@ -1,16 +1,4 @@
-/* Import The Library */
-@use "lib";
+@use 'base/underscores';
 
-/* Import Components you need */
-@use 'components/alert';
-@use 'components/button';
-@use 'components/cluster';
-@use 'components/container';
-@use 'components/flow';
-
-/* Your project CSS */
 @use 'error-page';
 @use 'main';
-
-/* Include Utilities last to avoid specicifity issues */
-@use 'utilities';
