Tidy up utilities and add examples

--- a/src/assets/css/_base.scss
+++ b/src/assets/css/_base.scss
@@ -1,75 +1,160 @@
 *,
 *:after,
 *:before {
-	box-sizing: border-box;
+    box-sizing: border-box;
+}
+
+/* Remove default margin */
+body,
+h1,
+h2,
+h3,
+h4,
+p,
+li,
+figure,
+figcaption,
+blockquote,
+dl,
+dd {
+    margin: 0;
+}
+
+html {
+    scroll-behavior: smooth;
 }
 
 body {
-	background-color: #f7f8fa;
-	color: map-get(config('color'), 'primary');
-	font-family: unquote(map-get(config('font'), 'base'));
-	font-size: var(--size-base);
-	margin: 0;
+    background-color: #f7f8fa;
+    color: token('color', 'primary', black);
+    font-family: token('font', 'base', sans-serif);
+    font-size: var(--size-base);
+    text-rendering: optimizeSpeed;
+    margin: 0;
+}
+
+fieldset {
+    border: 0;
+    margin: 0;
+    padding: 0;
 }
 
 p {
-	line-height: 1.45;
-	margin: 0;
+    line-height: config('leading', 'base');
+    margin: 0;
 }
 
 a {
-	text-decoration: none;
+    text-decoration: none;
 }
 
 img {
-	max-width: 100%;
-	height: auto;
+    display: block;
+    max-width: 100%;
+    height: auto;
+}
+
+input,
+button,
+textarea,
+select {
+    font: inherit;
 }
 
 button {
-	cursor: pointer;
+    cursor: pointer;
+}
+
+svg {
+    fill: currentColor;
+    height: 1em;
+    width: 1em;
 }
 
 [disabled] {
-	cursor: not-allowed;
-	opacity: 0.6;
+    cursor: not-allowed;
+    opacity: 0.6;
 }
 
 ul {
-	list-style: none;
-	margin: 0;
-	padding: 0;
+    list-style: none;
+    margin: 0;
+    padding: 0;
 }
 
 li {
-	margin: 0;
-	padding: 0;
+    margin: 0;
+    padding: 0;
+}
+
+code,
+pre {
+    font-family: token('font', 'mono', monospace);
+}
+
+code {
+    background-color: token('color', 'gray-90', #eee);
+    border-radius: token('radius', 'base', 4px);
+    color: token('color', 'positive', blue);
+    font-size: 0.8em;
+    padding: token('space', 1) token('space', 2);
+}
+
+pre code {
+    padding: 0;
 }
 
 h1,
 h2,
 h3,
 h4,
-h5,
-h6,
 .h1,
 .h2,
 .h3,
-.h4,
-.h5,
-.h6 {
-	letter-spacing: map-get(config('tracking'), 'tight');
-	line-height: 1;
-	font-weight: 700;
+.h4 {
+    letter-spacing: map-get(config('tracking'), 'tight');
+    line-height: 1;
+    font-weight: 700;
+    margin: 0;
+}
+
+h1,
+.h1 {
+    font-size: token('size', '3xl');
+}
+
+h2,
+.h2 {
+    font-size: token('size', '2xl');
+}
+
+h3,
+.h3 {
+    font-size: token('size', 'xl');
+}
+
+h4,
+.h4 {
+    font-size: token('size', 'lg');
 }
 
 @supports (display: grid) {
-	.browser-message {
-		display: none;
-	}
+    .browser-message {
+        display: none;
+    }
 }
 
 .email-address {
-	unicode-bidi: bidi-override;
-	direction: rtl;
+    unicode-bidi: bidi-override;
+    direction: rtl;
+}
+
+/* Remove all animations and transitions for people that prefer not to see them */
+@media (prefers-reduced-motion: reduce) {
+    * {
+        animation-duration: 0.01ms !important;
+        animation-iteration-count: 1 !important;
+        transition-duration: 0.01ms !important;
+        scroll-behavior: auto !important;
+    }
 }
