--- a/src/assets/css/utilities/_box-shadow.scss
+++ b/src/assets/css/utilities/_box-shadow.scss
@@ -1,7 +1,7 @@
 @if (config('shadow')) {
-	@each $key, $value in config('shadow') {
-		@include responsive-utility('shadow-#{$key}') {
-			box-shadow: $value;
-		}
-	}
+    @each $key, $value in config('shadow') {
+        @include responsive-utility('.shadow-#{$key}') {
+            box-shadow: unquote($value);
+        }
+    }
 }
