--- a/src/assets/css/_partials.scss
+++ b/src/assets/css/_partials.scss
@@ -1,9 +1,8 @@
-@import 'functions/rem', 'config', 'functions/config', 'functions/auto-color',
-	'mixins/responsive-utility', 'mixins/responsive-utility-from-map';
+@import 'functions/rem', 'config', 'functions/config', 'functions/token', 'functions/auto-color',
+    'mixins/responsive-utility', 'mixins/responsive-utility-from-map';
 
 @import 'helpers/global-custom-properties', 'helpers/type-scale', 'base';
 
-@import 'utilities/background', 'utilities/box-shadow', 'utilities/color',
-	'utilities/container', 'utilities/display', 'utilities/flow',
-	'utilities/grid', 'utilities/margin', 'utilities/padding',
-	'utilities/typography', 'utilities/width';
+@import 'utilities/background', 'utilities/border', 'utilities/box-shadow', 'utilities/cluster', 'utilities/color',
+    'utilities/container', 'utilities/display', 'utilities/flow', 'utilities/grid', 'utilities/image', 'utilities/space',
+    'utilities/typography', 'utilities/width';
