--- a/src/assets/css/mixins/_responsive-utility.scss
+++ b/src/assets/css/mixins/_responsive-utility.scss
@@ -1,13 +1,13 @@
 @mixin responsive-utility($name) {
-	.#{$name} {
-		@content;
-	}
+    #{$name} {
+        @content;
+    }
 
-	@each $bp, $size in config('breakpoints') {
-		@media (min-width: $size) {
-			.#{$bp}\:#{$name} {
-				@content;
-			}
-		}
-	}
+    @each $bp, $size in config('breakpoints') {
+        @media (min-width: $size) {
+            #{$bp}\:#{$name} {
+                @content;
+            }
+        }
+    }
 }
