--- a/src/assets/css/utilities/_width.scss
+++ b/src/assets/css/utilities/_width.scss
@@ -1,55 +1,51 @@
 .w-full {
-	width: 100%;
+    width: 100%;
 }
 
 .h-full {
-	height: 100%;
+    height: 100%;
 }
 
 .vw-half {
-	width: 50vw;
+    width: 50vw;
 }
 
 .vh-half {
-	height: 50vh;
+    height: 50vh;
 }
 
 .vw-full {
-	width: 100vw;
+    width: 100vw;
 }
 
 .vh-full {
-	height: 100vh;
+    height: 100vh;
 }
 
 .mw-full {
-	max-width: 100%;
+    max-width: 100%;
 }
 
 .mh-full {
-	max-height: 100%;
+    max-height: 100%;
 }
 
 .vw-full {
-	width: 100vw;
+    width: 100vw;
 }
 
 .vh-full {
-	height: 100vh;
+    height: 100vh;
 }
 
 .w-auto {
-	width: auto;
+    width: auto;
 }
 
 .h-auto {
-	height: auto;
+    height: auto;
 }
 
 @if (config('max-width')) {
-	@include responsive-utility-from-map(
-		config('max-width'),
-		'mw',
-		'max-width'
-	);
+    @include responsive-utility-from-map(config('max-width'), '.mw', 'max-width');
 }
