--- a/src/index.njk
+++ b/src/index.njk
@@ -6,7 +6,7 @@ eleventyNavigation:
     key: Home
 ---
 
-<div class="container | center-content | px-8">
+<div class="container | flex items-center justify-center | px-8">
     <main class="intro | flow">
         <img src="/assets/images/11ty.png" alt="11ty" width="120" height="120">
         <nav class="cluster">
