--- a/src/example.njk
+++ b/src/example.njk
@@ -14,7 +14,7 @@ layout: default
         </ul>
     </nav>
     <article id="flow" class="flow">
-        <h1 class="lg:c-negative-50">Flow</h1>
+        <h1>Flow</h1>
         <p>So you need to space out elements within a component. Flow does just that.</p>
         <p>See how each paragraph is nicely spaced? The Flow utility is handling that, leaving each of the child elements to focus on their own style, instead of having to manage the space around them.</p>
         <p>Modify the space between each item by applying a <code>flow-space-{x}</code> utility. Where <code>{x}</code> is a space value from your spacing scale.</p>
