--- a/src/assets/css/utilities/_border.scss
+++ b/src/assets/css/utilities/_border.scss
@@ -1,3 +1,3 @@
 @if (config('radius')) {
-    @include responsive-utility-from-map(config('radius'), '.radius', 'border-radius');
+	@include utility-from-map(config('radius'), '.radius', 'border-radius');
 }
