--- a/src/assets/css/utilities/_color.scss
+++ b/src/assets/css/utilities/_color.scss
@@ -1,3 +1,3 @@
 @if (config('color')) {
-    @include responsive-utility-from-map(config('color'), '.c', color);
+	@include utility-from-map(config('color'), '.c', color);
 }
