Tidy up default 404

--- a/src/404.njk
+++ b/src/404.njk
@@ -2,14 +2,10 @@
 title: Page Not Found
 permalink: /404.html
 eleventyExcludeFromCollections: true
+layout: default
 ---
 
-<div class="error-page">
-    <main class="error-page__content">
-        <div class="flow --space-3">
-            <h1>404</h1>
-            <p>The page you're looking for could not be found.</p>
-        </div>
-    </main>
-    <aside class="error-page__image" style="--bg-image: url('https://unsplash.it/500/1024')"></aside>
-</div>
+<main class="container | flow flow-space-3 | py-20 px-12">
+    <h1>404</h1>
+    <p>The page you're looking for could not be found.</p>
+</main>
