Remove link to old repo

--- a/src/index.njk
+++ b/src/index.njk
@@ -6,14 +6,11 @@ eleventyNavigation:
     key: Home
 ---
 
-<div class="container | flex items-center justify-center | px-8">
+<div class="container | align-center | px-8">
     <main class="intro | flow">
-        <img src="/assets/images/11ty.png" alt="11ty" width="120" height="120">
-        <nav class="cluster">
+        <img class="inline-block" src="/assets/images/11ty.png" alt="11ty" width="120" height="120">
+        <nav class="cluster cluster--center">
             <ul>
-                <li>
-                    <a class="btn" href="https://github.com/chrismademe/underscores-css">Underscores CSS</a>
-                </li>
                 <li>
                     <a class="btn" href="https://11ty.dev/docs">11ty Docs</a>
                 </li>
