Add Critical CSS plugin and improve performance

--- a/templates/index.njk
+++ b/templates/index.njk
@@ -1,5 +1,6 @@
 ---
 title: Home
+description: An SEO ready starter kit for 11ty with Design Tokens, Responsive Type Scale and Cypress Testing.
 ---
 
 <main class="container flow flow-space-20 mw-md px-20 py-32">
